    deep queue tree. (Kenji Kikushima and Akira Ajisaka via ozawa)

  NEW FEATURES

  IMPROVEMENTS

    YARN-1050. Document the Fair Scheduler REST API. (Kenji Kikushima and Roman Shaposhnik via kasha)

    MAPREDUCE-6478. Add an option to skip cleanupJob stage or ignore cleanup
    failure during commitJob. (Junping Du via wangda)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
    (Jason Lowe via junping_du)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-4347. Resource manager fails with Null pointer exception. (Jian He via wangda)

    YARN-3849. Too much of preemption activity causing continuos killing of containers
    across queues. (Sunil G via wangda)

    YARN-4422. Generic AHS sometimes doesn't show started, node, or logs on App page
    (Eric Payne via jeagles)

    YARN-4452. NPE when submit Unmanaged application. (Naganarasimha G R via
    junping_du)

    YARN-3655. FairScheduler: potential livelock due to maxAMShare limitation
    and container reservation. (Zhihai Xu via kasha)

    YARN-3762. FairScheduler: CME on FSParentQueue#getQueueUserAclInfo. (kasha)

    YARN-3582. NPE in WebAppProxyServlet. (jian he via xgong)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-3793. Several NPEs when deleting local files on NM recovery (Varun
    Saxena via jlowe)

    YARN-3990. AsyncDispatcher may overloaded with RMAppNodeUpdateEvent when
    Node is connected/disconnected (Bibin A Chundatt via jlowe)

    YARN-3857: Memory leak in ResourceManager with SIMPLE mode.
    (mujunchao via zxu)

    YARN-3697. FairScheduler: ContinuousSchedulingThread can fail to shutdown.
    (Zhihai Xu via kasha)

    YARN-3535. Scheduler must re-request container resources when RMContainer transitions